--- a/nuzlocke.r/frontend/app/components/main-menu/main-menu.component.html
+++ b/nuzlocke.r/frontend/app/components/main-menu/main-menu.component.html
@@ -32,7 +32,9 @@
       
       <button (click)="newGame()" class="menu-option">
         <div class="option-content">
-          <div class="option-icon">✨</div>
+          <div class="option-icon">
+            <img src="/pokeball-1.png" alt="New Game" class="menu-icon">
+          </div>
           <div class="option-text">
             <span class="option-title">New Game</span>
             <span class="option-subtitle">Start fresh adventure</span>
