Styled Pokemon Selector

--- a/nuzlocke.r/frontend/app/components/game/game.component.html
+++ b/nuzlocke.r/frontend/app/components/game/game.component.html
@@ -88,7 +88,9 @@
                     <div class="encounter-form">
                       <div class="form-inputs-inline">
                         <div class="form-group pokemon-group">
-                          <div class="pokemon-select-wrapper">
+                          <div class="labeled-selector">
+                            <span class="selector-label">Pokemon</span>
+                            <div class="selector-separator"></div>
                             @if (routeEncounterForms()[route.id] && routeEncounterForms()[route.id]!.selectedPokemon) {
                               <div class="selected-pokemon-sprite">
                                 <img [src]="routeEncounterForms()[route.id]!.selectedPokemon!.sprites.front_default" 
@@ -97,7 +99,7 @@
                               </div>
                             }
                             <select (change)="onRouteEncounterPokemonChange(route, $event)" class="pokemon-select compact">
-                              <option value="">Select Pokemon...</option>
+                              <option value="">Select...</option>
                               <option *ngFor="let pokemon of availablePokemonForRoute()" [value]="pokemon.id">
                                 {{ formatPokemonName(pokemon.name) }}
                               </option>
